--- a/Article/Article.less
+++ b/Article/Article.less
@@ -37,14 +37,32 @@
     color: grey;
     cursor: pointer;
     transform: translate(-50%);
-    background-color: white;
+    background-color: #C2B97F;
   }
 }
 
 .article-open {
-  height: 400px;
+  animation-name: expand;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
 }
 
+.article--close {
+  animation-name: close;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+}
 
+@keyframes expand{
+  to {
+    height: 600px;
 
+  }
+}
+
+@keyframes close{
+  to {
+    height: 50px;
+  }
+}
 
